# record-tools-rs

./: .gitignore  .hgignore  Cargo.toml  README.adoc  Taskfile.yml  config.toml  mise.toml  test_config.toml
doc/technical-debt-records/: 0001-technical-debt-decision.adoc
example/: .gitlab-ci.yml  .record-dir-adr  .record-dir-tdr  .record-file-type  Containerfile  Makefile  README.adoc  pom.xml
example/src/site/asciidoc/: architecture-decision-records.adoc  technical-debts-records.adoc
example/src/site/asciidoc/architecture-decision-records/: 0001-record-architecture-decisions.adoc
example/src/site/asciidoc/technical-debt-records/: 0001-technical-debt-decision.adoc
src/: config.rs  create.rs  logger.rs  main.rs
src/commands/: atom.rs  create.rs  digraph.rs  init.rs  list.rs  mod.rs
src/records/: create.rs  file_utils.rs  init.rs  mod.rs  record.rs  record_builder.rs
templates/: adr-init.adoc  adr-init.md  adr-template.adoc  adr-template.md  tdr-init.adoc  tdr-init.md  tdr-template.adoc  tdr-template.md
tests/: cli.rs  cli_test.rs  file_utils_test.rs
