[package]
name = "record-tools-rs"
version = "0.1.0"
authors = [
    "Christoph Kappel <christoph@unexist.dev>"
]
license-file = "LICENSE"
homepage = "https://unexist.dev"
repository = "https://hg.unexist.dev/record-tools-rs"
edition = "2024"
exclude = ["/Taskfile.yml", "/templates"]

[dependencies]
env_logger = "0.11.10"
log = "0.4.29"
clap = { version = "4.5.40", features = ["derive"] }
clap-config-file = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.11"
anyhow = "1.0.102"
text-template = "0.1.0"
time = {version = "0.3.41", features = ["formatting", "macros"]}
slugify = "0.1.0"
regex = "1.11.1"
stdext = "0.3.3"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.0"
proptest = "1.7.0"
tempfile = "3.20.0"

[[bin]]
name = "rtrs"
path = "src/main.rs"
