[package]
name = "record-tools-rs"
version = "0.1.0"
authors = [
    "Christoph Kappel <christoph@unexist.dev>"
]
license-file = "LICENSE"
homepage = "https://unexist.dev"
repository = "https://hg.unexist.dev/record-tools-rs"
edition = "2024"
exclude = ["/mise.toml", "/templates"]

[dependencies]
env_logger = "0.11.10"
log = "0.4.33"
clap = { version = "4.6.1", features = ["derive"] }
clap-config-file = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.24"
anyhow = "1.0.102"
text-template = "0.1.0"
time = {version = "0.3.51", features = ["formatting", "macros"]}
slugify = "0.1.0"
stdext = "0.3.3"
regex = "1.12.4"
aho-corasick = "1.1.4"
prettytable = "0.10.0"
chrono = "0.4.45"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
proptest = "1.11.0"
tempfile = "3.27.0"

[[bin]]
name = "rtrs"
path = "src/main.rs"
